# python_base_flex

./: .coveragerc  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
base_flex/: __init__.py  alphabets.py  base_flex.py
base_flex/tests/: test_base_flex.py
base_n/: __init__.py  alphabets.py  base_n.py
base_n/tests/: test_base_n.py
